refactor and list export revise

--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,8 @@
   "action": {
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "content_scripts": [
     {
